Fixed Output/errors horizontal scroll bug

--- a/ui/src/components/terminal_outputs/terminal.scss
+++ b/ui/src/components/terminal_outputs/terminal.scss
@@ -2,6 +2,8 @@
   padding-left: 5px;
   padding-right: 5px;
   background-color: #292b2c;
+  min-height: 200px;
+  display: flex;
 
   pre {
     color: white;
@@ -11,5 +13,4 @@
 .no-scroll {
   max-width: 100%;
   height: 200px;
-  overflow-x: hidden;
 }
